[package]
name = "actions-mdbook"
version = "0.1.0"
authors = ["xumax <xux.ma@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
futures-util = "0.3.13"
indicatif = "0.15.0"
reqwest = {version="0.11.1", features = ["json", "stream"]}
serde = {version="1.0.124", features = ["derive"]}
tokio = {version="1.2.0", features=["full"]}
url = "2.2.1"
